# pika

./: .editorconfig  .env.example  .gitignore  .swiftlint.yml  AGENTS.md  Cargo.toml  JOURNAL.md  README.md  SIGNING-STATUS.md  docker-compose.yml  flake.nix  justfile  mprocs.yaml  rmp.toml
cli/: Cargo.toml  README.md
cli/src/: harness.rs  lib.rs  main.rs  mdk_util.rs  microvm_spawner.rs  provider_control_plane.rs  relay_util.rs  remote.rs  workers_agents.rs
cli/src/agent/: harness.rs  provider.rs  session.rs
crates/ph/: Cargo.toml
crates/ph/src/: api.rs  commands.rs  lib.rs  resolve.rs  session.rs  tests.rs
crates/pika-agent-microvm/: Cargo.toml
crates/pika-agent-microvm/src/: lib.rs
crates/pika-desktop/: Cargo.toml
crates/pika-desktop/src/: app_manager.rs  icons.rs  lib.rs  main.rs  theme.rs  utils.rs
crates/pika-desktop/src/design/: mod.rs  styles.rs  tokens.rs
crates/pika-desktop/src/screen/: home.rs  login.rs
crates/pika-desktop/src/views/: avatar.rs  call_banner.rs  call_screen.rs  chat_rail.rs  command_palette.rs  conversation.rs  empty_state.rs  group_info.rs  hypernote.rs  markdown.rs  message_bubble.rs  mod.rs  my_profile.rs  new_chat.rs  new_group_chat.rs  peer_profile.rs  theme_picker.rs  toast.rs
crates/pika-git/: .gitignore  Cargo.toml  README.md  pika-git.example.toml
crates/pika-git/migrations/: 0001_init.sql  0004_inbox.sql  0006_allowlist.sql  0008_artifact_versions.sql  0009_branch_forge.sql  0010_allowlist_forge_write.sql  0012_ci_lane_leases.sql  0013_ci_lane_claim_tokens.sql  0014_branch_inbox.sql  0015_mirror_sync_runs.sql  0018_ci_lane_pikaci_metadata.sql  0020_ci_queue_state_and_target_health.sql  0022_branch_inbox_review_progress.sql  0023_branch_chat.sql  0025_drop_legacy_pr_surface.sql  0026_drop_ci_target_health.sql  0027_rename_ci_lane_metadata.sql  0028_rename_structured_ci_target.sql
crates/pika-git/src/: auth.rs  branch_store.rs  ci.rs  ci_manifest.rs  ci_state.rs  ci_store.rs  cli.rs  config.rs  forge.rs  forge_runtime.rs  forge_service.rs  inbox_store.rs  jerichoci_store.rs  local.rs  main.rs  mirror.rs  mirror_store.rs  model.rs  pikaci_store.rs  poller.rs  render.rs  storage.rs  test_support.rs  web.rs  worker.rs
crates/pika-git/src/web/: admin.rs  api.rs  auth.rs  chat.rs  live.rs  pages.rs  tests.rs  views.rs  (+1 more)
crates/pika-git/templates/: admin.html  base.html  branch_ci.html  branch_ci_live.html  detail.html  feed.html  inbox.html  nightly.html  nightly_live.html
crates/pika-marmot-runtime/: Cargo.toml
crates/pika-marmot-runtime/src/: call.rs  call_runtime.rs  conversation.rs  group.rs  key_package.rs  lib.rs  media.rs  membership.rs  message.rs  outbound.rs  relay.rs  runtime.rs  welcome.rs
crates/pika-news/: .gitignore  Cargo.toml  README.md  pika-news.example.toml
crates/pika-news/migrations/: 0002_add_unified_diff.sql  0003_chat_sessions.sql  0005_auth_tokens.sql  0007_inbox_dismissals.sql  0011_ci_lanes_and_nightlies.sql  0016_ci_rerun_provenance.sql  0017_ci_lane_concurrency_groups.sql  0021_restore_branch_closed_inbox.sql  0024_ci_lane_structured_pikaci_target.sql
crates/pika-news/qa/: manual-qa-2026-03-02.txt
crates/pika-news/src/: auth.rs  branch_store.rs  chat_store.rs  ci.rs  ci_manifest.rs  ci_store.rs  cli.rs  config.rs  forge.rs  forge_runtime.rs  forge_service.rs  github.rs  legacy_pr_store.rs  live.rs  local.rs  main.rs  mirror.rs  mirror_store.rs  model.rs  pikaci_store.rs  poller.rs  render.rs  storage.rs  tutorial.rs  web.rs  worker.rs
crates/pika-news/templates/: admin.html  base.html  branch_ci.html  branch_ci_live.html  branch_ci_summary.html  detail.html  feed.html  inbox.html  nightly.html  nightly_live.html
crates/pika-nse/: Cargo.toml  build.rs  uniffi.toml
crates/pika-nse/src/: lib.rs  mdk_support.rs
crates/pika-server/: Cargo.toml
crates/pika-server/src/: admin.rs  agent_api.rs  agent_api_v1_contract.rs  agent_control.rs  browser_auth.rs  customer.rs  main.rs  managed_openclaw_guest.rs  managed_runtime_contract.rs  nostr_auth.rs  test_support.rs
crates/pikachat-sidecar/: Cargo.toml
crates/pikachat-sidecar/src/: acp.rs  call_audio.rs  daemon.rs  lib.rs  protocol.rs
crates/pikachat-wasm/: Cargo.toml
crates/pikachat-wasm/src/: lib.rs
crates/pikaci/: Cargo.toml
crates/pikaci/src/: catalog.rs  ci_catalog.rs  executor.rs  forge_lanes.rs  forge_manifest.rs  lib.rs  main.rs  model.rs  output.rs  run.rs  snapshot.rs  targets.rs
crates/pikaci/tests/: fulfill_prepared_output_request_cli.rs  launch_fulfill_prepared_output_cli.rs
crates/pikahub/: Cargo.toml
crates/pikahub/src/: component.rs  config.rs  fixture.rs  lib.rs  main.rs  manifest.rs
crates/pikahut/: Cargo.toml
crates/pikahut/src/: blossom_upload.rs  component.rs  config.rs  fixture.rs  health.rs  lib.rs  main.rs  manifest.rs  test_harness.rs
crates/pikahut/tests/: guardrails.rs  integration_deterministic.rs  integration_manual.rs  integration_openclaw.rs  integration_primal.rs  integration_public.rs  support.rs
crates/rmp-cli/: Cargo.toml
crates/rmp-cli/src/: bindings.rs  cli.rs  config.rs  devices.rs  doctor.rs  init.rs  main.rs  run.rs
crates/vm-spawner/: Cargo.toml
crates/vm-spawner/src/: config.rs  main.rs  manager.rs  models.rs
nix/ci/pika-core-workspace/: Cargo.toml
nix/ci/rmp-workspace/: Cargo.toml
rust/: Cargo.toml  build.rs
rust/src/: actions.rs  android_keyring.rs  bunker_signer.rs  core.rs  external_signer.rs  lib.rs  logging.rs  mdk_support.rs  route_projection.rs  state.rs  tls.rs  updates.rs
rust/src/core/: agent.rs  call_control.rs  call_runtime.rs  chat_media.rs  chat_media_db.rs  config.rs  evolution.rs  group_profile.rs  host_context.rs  interop.rs  mod.rs  profile.rs  profile_db.rs  profile_pics.rs  push.rs  relay_publish.rs  session.rs  storage.rs
rust/src/markdown/: mod.rs  zig_mdx.rs
rust/tests/: app_flows.rs  e2e_calls.rs  e2e_deployed_bot_call.rs  e2e_group_profiles.rs  e2e_local_marmotd_call.rs  e2e_local_relay.rs  e2e_messaging.rs  e2e_public_relays.rs  e2e_real_moq_relay.rs  perf_relay_latency.rs
rust/tests/support/: helpers.rs  infra.rs  mod.rs
(+607 files in other folders)
