[package]
name = "pika-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pika-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr-blossom = "0.44.0"
nostr-sdk = { version = "0.44.1", features = ["nip59"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
