[package]
name = "pikachat"
version = "1.1.1"
edition = "2024"

[[bin]]
name = "pikachat"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["env"] }
hex = { workspace = true }
mdk-core = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr-blossom = { workspace = true }
nostr-sdk = { workspace = true, features = ["nip59"] }
pika-agent-protocol = { path = "../crates/pika-agent-protocol" }
pika-managed-agent-contract = { workspace = true }
pika-relay-profiles = { path = "../crates/pika-relay-profiles" }
pika-marmot-runtime = { path = "../crates/pika-marmot-runtime" }
pikachat-sidecar = { path = "../crates/pikachat-sidecar" }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hypernote-protocol = { workspace = true }
qr2term = "0.3"

[dev-dependencies]
pika-test-utils = { path = "../crates/pika-test-utils" }
tempfile = { workspace = true }
