[package]
name = "pika_core"
version = "0.1.0"
edition = "2021"

[lib]
# Keep rlib so Rust integration tests can `use pika_core::...`.
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blurhash = "0.2"
flume = { workspace = true }
hex = { workspace = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
# NOTE: CI-compatible dependency pinning. Do not use local path deps here.
# If you need to develop against a local MDK checkout, use a gitignored
# `.cargo/config.toml` with a `[patch."https://github.com/marmot-protocol/mdk"]`
# section instead.
# MDK is pinned at the workspace root to avoid version skew between workspace members.
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
keyring-core = { workspace = true }
nostr-sdk = { workspace = true, features = ["nip59"] }
nostr-connect = { workspace = true }
nostr-blossom = { workspace = true }
pika-agent-control-plane = { path = "../crates/pika-agent-control-plane" }
pika-marmot-runtime = { path = "../crates/pika-marmot-runtime" }
pika-relay-profiles = { path = "../crates/pika-relay-profiles" }
pika-media = { path = "../crates/pika-media", features = ["network"] }
pika-tls = { path = "../crates/pika-tls" }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls"] }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry"] }
uniffi = { workspace = true }
uuid = { workspace = true }
cpal = "0.16"
hypernote-mdx = { workspace = true }
hypernote-protocol = { workspace = true }
chrono = { workspace = true }
regex = "1"

[target.'cfg(not(target_os = "android"))'.dependencies]
# SQLCipher without vendored OpenSSL. Apple targets use CommonCrypto; desktop targets can use
# system roots/crypto. This keeps iOS builds free of OpenSSL toolchain issues.
libsqlite3-sys = { workspace = true, features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android NDK doesn't ship OpenSSL headers/libs, but SQLCipher's default crypto backend is OpenSSL.
# Vendor OpenSSL for Android builds so `bundled-sqlcipher` compiles.
libsqlite3-sys = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl"] }
android-native-keyring-store = "0.5.0"
jni = "0.21"
ndk-context = "0.1.1"
paranoid-android = "0.2"

[dev-dependencies]
futures-util = "0.3"
nostr-connect = { workspace = true }
pikahut = { path = "../crates/pikahut" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-tungstenite = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { workspace = true }
tracing-oslog = "0.3"
