[package]
name = "pika-agent-microvm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
nostr-sdk = { workspace = true }
pika-agent-control-plane = { path = "../pika-agent-control-plane" }
reqwest = { workspace = true, features = ["json", "native-tls"] }
serde_json = { workspace = true }

[dev-dependencies]
pika-test-utils = { path = "../pika-test-utils" }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
