[package]
name = "pika-git"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pika-git"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ammonia = "4.1"
askama = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
clap = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true }
globset = "0.4"
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
nostr = { workspace = true }
pika-forge-model = { path = "../pika-forge-model" }
rand = { workspace = true }
pulldown-cmark = "0.10"
pikaci = { path = "../pikaci" }
reqwest = { workspace = true, features = ["blocking", "json", "native-tls"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
