[package]
name = "pika-marmot-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr-sdk = { workspace = true, features = ["nip44", "nip59"] }
pika-media = { path = "../pika-media", features = ["network"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tempfile = { workspace = true }
