[package]
name = "pika-marmot-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr-blossom = { workspace = true }
nostr-sdk = { workspace = true, features = ["nip44", "nip59"] }
pika-media = { path = "../pika-media", features = ["network"] }
reqwest = { workspace = true, features = ["json", "native-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
hypernote-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
