[package]
name = "pika-news"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pika-news"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ammonia = "4.1"
askama = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
clap = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
nostr = { workspace = true }
rand = { workspace = true }
pulldown-cmark = "0.10"
reqwest = { workspace = true, features = ["blocking", "json", "native-tls"] }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
