[package]
name = "pika-nse"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1"
hex = "0.4"
keyring-core = "0.7"
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr = "0.44"
pika-tls = { path = "../pika-tls" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = "0.31.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }

[target.'cfg(target_os = "android")'.dependencies]
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher-vendored-openssl"] }

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2.2", features = ["protected"] }
