[package]
name = "pika-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pika-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
async-trait = "0.1"
axum = { version = "0.6.16", features = ["ws"] }
chrono = { workspace = true, features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.28"
hex = { workspace = true }
hmac = "0.12"
nostr = { workspace = true }
nostr-sdk = { workspace = true, features = ["nip59"] }
pika-agent-control-plane = { path = "../pika-agent-control-plane" }
pika-agent-microvm = { path = "../pika-agent-microvm" }
pika-relay-profiles = { path = "../pika-relay-profiles" }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.26"
a2 = "0.10"
base64 = { workspace = true }
fcm-rs = "0.2"
tower = { version = "0.4", features = ["make", "util"] }

[dev-dependencies]
pika-test-utils = { path = "../pika-test-utils" }
