[package]
name = "pika-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pika-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
axum = { workspace = true, features = ["ws"] }
chrono = { workspace = true, features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
nostr-sdk = { workspace = true, features = ["nip59"] }
pika-managed-agent-contract = { workspace = true }
pika-cloud = { path = "../pika-cloud" }
pika-relay-profiles = { path = "../pika-relay-profiles" }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls", "rustls-tls"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true }
a2 = "0.10"
base64 = { workspace = true }
fcm-rs = "0.2"
ipnet = "2.11"
tower = { version = "0.5", features = ["make", "util"] }
url = { workspace = true }

[dev-dependencies]
pika-test-utils = { path = "../pika-test-utils" }
