[package]
name = "pikachat-sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
mdk-core = { workspace = true }
mdk-sqlite-storage = { workspace = true }
mdk-storage-traits = { workspace = true }
nostr-blossom = { workspace = true }
nostr-sdk = { workspace = true, features = ["nip44", "nip59"] }
pika-marmot-runtime = { path = "../pika-marmot-runtime" }
pika-relay-profiles = { path = "../pika-relay-profiles" }
pika-media = { path = "../pika-media", features = ["network"] }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
hound = "3.5"
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
hypernote-protocol = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
