[package]
name = "pikachat-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
base64 = "0.22"
hex = "0.4"
mdk-core = { git = "https://github.com/justinmoon/mdk", rev = "43ef3957acf159cae414936b146538e854e83579", features = ["mip04"] }
mdk-memory-storage = { git = "https://github.com/justinmoon/mdk", rev = "43ef3957acf159cae414936b146538e854e83579" }
nostr = { version = "0.44", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
openmls = { version = "0.8", default-features = false, features = ["js"] }
