[package]
name = "pikaci"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
globset = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
jerichoci = { workspace = true }
pika-incus-guest-role = { workspace = true }
