[package]
name = "pikahub"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pikahub"
path = "src/main.rs"

[dependencies]
pika-marmot-runtime = { path = "../pika-marmot-runtime" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
nix = { version = "0.29", features = ["signal", "process"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
