[package]
name = "pikahut"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "pikahut"
path = "src/main.rs"

[dependencies]
pika-marmot-runtime = { path = "../pika-marmot-runtime" }
pika-relay-profiles = { path = "../pika-relay-profiles" }
pika-desktop = { path = "../pika-desktop" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls"] }
nix = { version = "0.29", features = ["signal", "process"] }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
bech32 = "0.11"
rand = { workspace = true }
nostr-blossom = { workspace = true }
nostr-sdk = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pika_core = { path = "../../rust" }
rustls = { workspace = true }
nostr-connect = { workspace = true }
