[package]
name = "rmp-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rmp"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
walkdir = "2"
pika-relay-profiles = { path = "../pika-relay-profiles" }
