[package]
name = "vm-spawner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vm-spawner"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.6.20", features = ["ws"] }
chrono = { workspace = true, features = ["serde"] }
pika-agent-control-plane = { path = "../pika-agent-control-plane" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nostr-sdk = { workspace = true }
pika-agent-microvm = { path = "../pika-agent-microvm" }
tempfile = { workspace = true }
