[workspace]
resolver = "2"
members = [
  "crates/pika-relay-profiles",
  "crates/rmp-cli",
  "rmp-template/rust",
  "rmp-template/uniffi-bindgen",
  "rmp-template/desktop/iced",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flume = "0.11"
iced = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.8"
uniffi = "0.31.0"
url = "2"
